tests/syntax_error/zig_pointer_type.jou
def blah() -> None:
    foo: *byte  # Error: a type cannot start with '*', use e.g. int* instead of *int for pointers
